fix font size on mobile devices

--- a/assets/styles/speaker-profile.css
+++ b/assets/styles/speaker-profile.css
@@ -199,4 +199,9 @@
         flex-direction: column;
         margin: auto;
     }
+    .card-fullname {
+       
+        font-size: smaller;
+        
+    }
 }
